feat/secao-our-story

--- a/index.html
+++ b/index.html
@@ -23,8 +23,22 @@
         <button class="main-btn">Compre Agora</button>
     </header>
 
+    <section id="our-story">
+        <div class="img-container">
+            <div class="img"></div>
+        </div>
 
-
-
+        <div class="section-content">
+            <div class="title-style">
+                <span class="line"></span>
+                <h1 class="title">Our Story</h1>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum assumenda quaerat nam beatae, aspernatur quae recusandae 
+                laudantium laborum qui aliquid! Iure ducimus cum in neque odit. Reiciendis nam deleniti eveniet?
+            </p>
+            <button>Learn More</button>
+        </div>
+    </section>
 </body>
 </html>
