feat/coffee-section

--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
         <h1 class="logo">Logo</h1>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="">Sobre</a></li>
             <li><a href="">Menu</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="">Contato</a></li>
         </ul>
     </nav>
 
+    <!--Header-->
     <header class="header">
         <h1 class="main-headings">COMECE O SEU DIA</h1>
         <h1 class="primary-heading">COM O NOSSO CAFÉ</h1>
         <button class="main-btn">Compre Agora</button>
     </header>
 
+    <!--Nossa História-->
     <section id="our-story">
         <div class="img-container">
             <div class="img"></div>
@@ -31,14 +33,36 @@
         <div class="section-content">
             <div class="title-style">
                 <span class="line"></span>
-                <h1 class="title">Our Story</h1>
+                <h1 class="title">Nossa História</h1>
             </div>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum assumenda quaerat nam beatae, aspernatur quae recusandae 
                 laudantium laborum qui aliquid! Iure ducimus cum in neque odit. Reiciendis nam deleniti eveniet?
             </p>
-            <button>Learn More</button>
+            <button>Saiba Mais</button>
         </div>
+    </section>
+
+    <!--Seção sobre café-->
+    <section class="coffee-container">
+        <div class="content-section">
+            <div class="title-style">
+                <h1 class="title-two">
+                    Lugar Perfeito <br>
+                    Para Aproveitar Um <br>
+                    Café
+                </h1>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga consequatur minima expedita eveniet fugiat qui ipsam cum officia
+            </p>
+            <button style="margin-top: 20px;">Saiba Mais</button>
+        </div>
+
+        <section class="img-container">
+            <img src="/Images/2.png" class="img-2"/>
+        </section>
+
     </section>
 </body>
 </html>
