--- a/index.html
+++ b/index.html
@@ -62,7 +62,53 @@
         <section class="img-container">
             <img src="/Images/2.png" class="img-2"/>
         </section>
-
     </section>
+
+    <!--Seção de produtos-->
+    <section class="products">
+        <h1 class="title title-three">Products</h1>
+
+        <section class="cards">
+            <div class="card">
+                <div class="card-img img-one"></div>
+                <div class="card-title">
+                    <h1>Mocha</h1>
+                </div>
+                <div class="items">
+                    <p>Expresso</p>
+                    <p>Chocolate</p>
+                    <p>Leite</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img img-two"></div>
+                <div class="card-title">
+                    <h1>Latte</h1>
+                </div>
+                <div class="items">
+                    <p>Expresso</p>
+                    <p>Chocolate</p>
+                    <p>Leite</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img img-three"></div>
+                <div class="card-title">
+                    <h1>Macchiato</h1>
+                </div>
+                <div class="items">
+                    <p>Expresso</p>
+                    <p>Chocolate</p>
+                    <p>Leite</p>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <!--Footer -->
+    
+
 </body>
 </html>
