feat/footer-section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,32 @@
     </section>
 
     <!--Footer -->
-    
+    <footer>
+        <span class="lines"></span>
+        <div class="container">
+            <h1 class="heading-info">Sobre <span>Nós</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus possimus accusantium 
+            </p>
+        </div>
 
+        <div class="container">
+            <h1 class="heading-info">Entre em <span>Contato</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus possimus accusantium  
+            </p>
+        </div>
+
+        <div class="container">
+            <h1 class="heading-info">Nosso <span>Endereço</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus possimus accusantium  
+            </p>
+        </div>
+
+        <p class="para">
+            Copyright &copy; 2025 Coffee-Shop. Todos os direitos reservados.
+        </p>
+    </footer>
 </body>
 </html>
