--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
         <h1 class="logo">Logo</h1>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#our-story">Sobre</a></li>
+            <li><a href="#products">Menu</a></li>
+            <li><a href="#footer">Contato</a></li>
         </ul>
     </nav>
 
@@ -65,7 +65,7 @@
     </section>
 
     <!--Seção de produtos-->
-    <section class="products">
+    <section id="products">
         <h1 class="title title-three">Products</h1>
 
         <section class="cards">
@@ -108,7 +108,7 @@
     </section>
 
     <!--Footer -->
-    <footer>
+    <footer class="footer">
         <span class="lines"></span>
         <div class="container">
             <h1 class="heading-info">Sobre <span>Nós</span></h1>
